crates/voom-cli/tests/snapshots/scheduler_envelope__scheduler_envelope__scheduler_decisions_list_outputs_envelope.snap
---
source: crates/voom-cli/tests/scheduler_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "scheduler",
  "status": "ok",
  "data": {
    "decisions": [
      {
        "id": 1,
        "created_at": "1970-01-01 0:00:00.0 +00:00:00",
        "outcome": "selected",
        "reason_code": "selected",
        "summary": "selected worker 2 for ticket 3",
        "request_worker_id": 2,
        "request_node_id": 1,
        "ticket_id": 3,
        "selected_worker_id": 2,
        "selected_node_id": 1,
        "selected_lease_id": 4,
        "candidate_count": 1,
        "selected_score": 1700,
        "suppressed_count": 0
      }
    ]
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
