crates/voom-cli/tests/snapshots/scheduler_envelope__scheduler_envelope__scheduler_decisions_show_outputs_full_explanation.snap
---
source: crates/voom-cli/tests/scheduler_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "scheduler",
  "status": "ok",
  "data": {
    "decision": {
      "id": 1,
      "created_at": "1970-01-01 0:00:00.0 +00:00:00",
      "updated_at": "1970-01-01 0:00:00.0 +00:00:00",
      "outcome": "selected",
      "reason_code": "selected",
      "summary": "selected worker 2 for ticket 3",
      "request_worker_id": 2,
      "request_node_id": 1,
      "ticket_id": 3,
      "selected_worker_id": 2,
      "selected_node_id": 1,
      "selected_lease_id": null,
      "candidate_count": 1,
      "selected_score": 1700,
      "suppressed_count": 0,
      "access_evidence": {
        "evidence": "owner",
        "declaration": [
          {
            "target": {
              "kind": "storage_root",
              "storage_root_id": 7
            },
            "rights": [
              "read"
            ]
          }
        ],
        "root_epochs": [
          {
            "storage_root_id": 7,
            "root_epoch": 3
          }
        ]
      },
      "explanation_json": {
        "scoring_version": 1,
        "candidates": []
      }
    }
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
